2011-04-13  Simon Fraser  <simon.fraser@apple.com>

        Revert http://trac.webkit.org/changeset/83750 because it broke PrettyPatch.
        https://bugs.webkit.org/show_bug.cgi?id=58510        

        * PrettyPatch/PrettyPatch.rb:

2011-04-12  Tony Chang  <tony@chromium.org>

        Reviewed by Adam Roben.

        make PrettyPatch.rb aware of checksums in png files
        https://bugs.webkit.org/show_bug.cgi?id=58387

        * PrettyPatch/PrettyPatch.rb:

2011-04-12  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Review tool should work well on iPad
        https://bugs.webkit.org/show_bug.cgi?id=58351

        On the iPad, the toolbar ends up at some random position in the middle
        of the page because of how position:fixed interacts with scrolling on
        the iPad.  I feel a bit dirty using a user agent detect, but I'm not
        sure if there's a better way to detect whether the user agent has this
        behavior.

        * code-review.js:

2011-03-15  David Levin  <levin@chromium.org>

        Reviewed by Adam Barth.

        Links from code reviews to trac are incorrect for files in Source/WebKit.
        https://bugs.webkit.org/show_bug.cgi?id=56404

        * PrettyPatch/PrettyPatch.rb: Remove WebKit from the list of top level
          directories since it is now under Source.

2011-03-10  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        Reviewed by Adam Roben.

        Formatted Diff for attachment 23920 is mangled
        https://bugs.webkit.org/show_bug.cgi?id=21222

        The mangled diff files mentioned in the bug were using Mac line
        ending and this was causing problems for String#each_line. Now we
        normalize the line endings in patch data before processing it.

        * PrettyPatch/PrettyPatch.rb:

2011-03-10  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        Reviewed by Adam Roben.
