@@ -1,3 +1,14 @@
+2011-04-14  Tony Chang  <tony@chromium.org>
+
+        Reviewed by Adam Roben.
+
+        make PrettyPatch.rb aware of checksums in png files
+        https://bugs.webkit.org/show_bug.cgi?id=58387
+
+        Patch v2 with nil checks in the case of file adds and deletes.
+
+        * PrettyPatch/PrettyPatch.rb:
+
 2011-04-13  Simon Fraser  <simon.fraser@apple.com>
 
         Revert http://trac.webkit.org/changeset/83750 because it broke PrettyPatch.
